# Fem

./: .config.json  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  Hall.pslg  K.pslg  Makefile  READEME  README.md  U.pslg  Vortex.pslg  compile_commands.json  config.json  fem  gen_mesh.sh  generate.sh  notes.md  pslgen.py  test.lua  time.tikz  times.cplot  todo.txt  triangle
.mesh/: m2.ele  m2.neigh  m2.node  m2.poly  trial.bc  trial.ele  trial.neigh  trial.node  trial.poly
examples/: c1a.lua  c1b.lua  c1c.lua  c1d.lua  c2a.lua  c2b.lua  c2c.lua  c2d.lua  r1.lua  r1a.lua  r1b.lua  r1d.lua  r2a.lua  r2b.lua  r2c.lua  r2d.lua
images/: time.tikz
include/: async.hpp  basis.hpp  fem.hpp  fem_1d.hpp  shape.hpp
matplotlib/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  TEST1.txt  TEST2.txt  view.py
mesh/: trial.mesh
notes/: layout.dot
pslg/: A.poly  c3.poly  c5.poly  c6.poly  circ.poly  circles.pslg  pslgen.py  rings.pslg  test.poly  tri.poly  trial.poly
resources/: A.1.ele  A.1.node  A.1.poly  A.pslg  circ.lua  rect.lua  rect.poly  test.lua  trial.lua
scripts/: cmap.py  convert_cmap.py  funcs.lua  generate.sh  perlin.lua  test.lua
src/: argparse.cpp  argparse.hpp  arta.cpp  arta.hpp  basis.cpp  basis.hpp  calc.hpp  cmaps.hpp  fem.hpp  fem_1d.cpp  file.cpp  file.hpp  geometry.hpp  integrate.cpp  integrate.hpp  linalg.cpp  linalg.hpp  logger.hpp  main.cpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  pde.cpp  pde.hpp  plot.cpp  plot.hpp  print.cpp  print.hpp  script.cpp  script.hpp  shape.cpp  timer.cpp  timer.hpp  vector.cpp  (+1 more)
(+61 files in other folders)
